syntax = "proto3";

option java_package = "t.it.simplespringapp.models.requests";
option java_multiple_files = true;

message AddProduct{
  string name = 1;
  int64 price = 2;
  string category = 3;
  int64 updated_at = 4;
  int64 created_at = 5;
  string description = 6;
}