syntax = "proto3";
import "add_product.proto";
import "update_product.proto";
import "added_product.proto";
import "product_detail.proto";
import "web.proto";
import "added_products.proto";
import "product_id.proto";
import "empty.proto";

option java_package = "t.it.boilerplates.controllers";
option java_multiple_files = true;

service ProductController{
  rpc Add(AddProduct) returns (AddedProduct);
  rpc GetById(ProductId) returns (ProductDetail);
  rpc UpdateSomeFields(UpdateProduct) returns (AddedProduct);
  rpc UpdateAllFields(UpdateProduct) returns (AddedProduct);
  rpc Remove(ProductId) returns (Web);
  rpc Get(Empty) returns (AddedProducts);
}