syntax = "proto3";

option java_package = "t.it.boilerplates.models.requests";
option java_multiple_files = true;

message ProductId{
  string id = 1;
}