syntax = "proto3";

option java_package = "t.it.boilerplates.models.requests";
option java_multiple_files = true;

message UpdateProduct{
  string id = 1;
  string name = 2;
  int64 price = 3;
  string category = 4;
  int64 updated_at = 5;
  string description = 6;
}